<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalendarEvent2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="event_name">Name</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="dates">Dates</string>
    <string name="category">Category</string>
    <string name="submit">Submit</string>
    <string name="starttime">Start Time</string>
    <string name="endtime">End Time</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>

</resources>
